src/test/ui/feature-gates/feature-gate-doc_html_in_header.stderr
error[E0658]: `#[doc(html_in_header)]` is experimental
  --> $DIR/feature-gate-doc_html_in_header.rs:1:1
   |
LL | #![doc(html_in_header = "head.html")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(doc_html_in_header)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
