src/test/ui/feature-gates/feature-gate-doc_html_in_header.rs
#![doc(html_in_header = "head.html")] //~ ERROR: `#[doc(html_in_header)]` is experimental
fn main() {}
